Fix sql sharesFormatted to use shares instead of price

FIXEDIN: 5.1.4
BUG: 473322